--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "jasmine-core": "^2.5.2",
     "reflect-metadata": "^0.1.9",
     "rxjs": "~5.0.2",
+    "web-animations-js": "^2.2.2",
     "zone.js": "~0.7.4"
   },
   "devDependencies": {
